apps/chrome/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chrome
spec:
  ports:
    - name: cdp
      port: 9222
      targetPort: cdp
  selector:
    app.kubernetes.io/instance: chrome
    app.kubernetes.io/name: chrome
