apps/chrome/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: chrome
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: hermes-agent
      ports:
        - port: cdp
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: chrome
      app.kubernetes.io/name: chrome
  policyTypes:
    - Ingress
